Fixed unused maxiters option
The option `maxiters`, stored as `simu_opts->maxiters` was not used after storing it, and the number of times the loop runs was hard coded to be 20. Also changed the option-descriptions to better reflect the meaning of the `maxiters` option, which, if I understand correctly, is the number of times the outer loop runs while the inner loop is fixed to 1000 steps/iterations for each of the outer loop's run.

--- a/README
+++ b/README
@@ -75,7 +75,7 @@ Use "./RACIPE -h" to find all available options.
 -thrd          : Cutoff for convergence of steady states for numerically solving ODEs (Default 1.0).
 -Toggle_f_p    : Save parameters of each RACIPE model or not (Default 1 (yes)).
 -stepsize      : Stepsize for solving ODEs (Default 0.1).
--maxiters      : The maximum number of iterations for solving ODEs at each random initial condition (Default 20).
+-maxiters      : The maximum number of iterations for solving ODEs at each random initial condition times 1000 (Default 20).
 -Toggle_T_test : Test the threshold assumption or not (Default 1 (yes)).
 -SBML_model    : Output a model in the SBML format. The parameter will be the ID of the model (start from 1) to save (Default 0 (no SBML output)).
 -seed          : random seed (Default 1). 
